enable to run sample axis2server using java service wrapper
git-svn-id: https://svn.apache.org/repos/asf/webservices/synapse/branches/1.1.1@614821 13f79535-47bb-0310-9956-ffa450edef68